--- a/main.ipynb
+++ b/main.ipynb
@@ -14,89 +14,25 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import re"
+    "import re\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[       x         y  u(y)\n",
-      "0    0.0  0.000000  15.0\n",
-      "1    0.0  0.001245  15.0\n",
-      "2    0.0  0.002416  15.0\n",
-      "3    0.0  0.003517  15.0\n",
-      "4    0.0  0.004553  15.0\n",
-      "..   ...       ...   ...\n",
-      "196  0.0  0.092784   5.0\n",
-      "197  0.0  0.094527   5.0\n",
-      "198  0.0  0.096310   5.0\n",
-      "199  0.0  0.098134   5.0\n",
-      "200  0.0  0.100000   5.0\n",
-      "\n",
-      "[201 rows x 3 columns],        x         y      u(y)\n",
-      "0    0.1  0.000000  14.95650\n",
-      "1    0.1  0.001245  14.95640\n",
-      "2    0.1  0.002416  14.95620\n",
-      "3    0.1  0.003517  14.95590\n",
-      "4    0.1  0.004553  14.95550\n",
-      "..   ...       ...       ...\n",
-      "196  0.1  0.092784   4.94920\n",
-      "197  0.1  0.094527   4.94936\n",
-      "198  0.1  0.096310   4.94949\n",
-      "199  0.1  0.098134   4.94957\n",
-      "200  0.1  0.100000   4.94960\n",
-      "\n",
-      "[201 rows x 3 columns],        x         y      u(y)\n",
-      "0    0.2  0.000000  14.93900\n",
-      "1    0.2  0.001245  14.93890\n",
-      "2    0.2  0.002416  14.93870\n",
-      "3    0.2  0.003517  14.93840\n",
-      "4    0.2  0.004553  14.93810\n",
-      "..   ...       ...       ...\n",
-      "196  0.2  0.092784   4.87240\n",
-      "197  0.2  0.094527   4.87256\n",
-      "198  0.2  0.096310   4.87269\n",
-      "199  0.2  0.098134   4.87278\n",
-      "200  0.2  0.100000   4.87281\n",
-      "\n",
-      "[201 rows x 3 columns],        x         y      u(y)\n",
-      "25   0.3  0.000000  14.92000\n",
-      "26   0.3  0.001245  14.91990\n",
-      "27   0.3  0.002416  14.91970\n",
-      "28   0.3  0.003517  14.91940\n",
-      "29   0.3  0.004553  14.91900\n",
-      "..   ...       ...       ...\n",
-      "200  0.3  0.092784   4.78888\n",
-      "201  0.3  0.094527   4.78904\n",
-      "202  0.3  0.096310   4.78916\n",
-      "203  0.3  0.098134   4.78925\n",
-      "204  0.3  0.100000   4.78929\n",
-      "\n",
-      "[205 rows x 3 columns],        x         y      u(y)\n",
-      "0    0.4  0.000000  14.89900\n",
-      "1    0.4  0.001245  14.89900\n",
-      "2    0.4  0.002416  14.89820\n",
-      "3    0.4  0.003517  14.88830\n",
-      "4    0.4  0.004553  14.83770\n",
-      "..   ...       ...       ...\n",
-      "196  0.4  0.092784   4.69824\n",
-      "197  0.4  0.094527   4.69840\n",
-      "198  0.4  0.096310   4.69853\n",
-      "199  0.4  0.098134   4.69862\n",
-      "200  0.4  0.100000   4.69866\n",
-      "\n",
-      "[201 rows x 3 columns],        x         y      u(y)\n",
-      "0    0.5  0.000000  14.45680\n",
-      "1    0.5  0.001245  14.40330\n",
-      "2    0.5  0.002416  14.26960\n",
-      "3    0.5  0.003517  14.09530\n",
-      "4    0.5  0.004553  13.90500\n",
+      "       x         y      u(y)\n",
+      "0    0.0  0.000000  15.00000\n",
+      "1    0.0  0.001245  15.00000\n",
+      "2    0.0  0.002416  15.00000\n",
+      "3    0.0  0.003517  15.00000\n",
+      "4    0.0  0.004553  15.00000\n",
       "..   ...       ...       ...\n",
       "196  0.5  0.092784   4.60054\n",
       "197  0.5  0.094527   4.60070\n",
@@ -104,13 +40,15 @@
       "199  0.5  0.098134   4.60092\n",
       "200  0.5  0.100000   4.60096\n",
       "\n",
-      "[201 rows x 3 columns]]\n"
+      "[1210 rows x 3 columns]\n",
+      "[0.0, 0.1, 0.2, 0.3, 0.4, 0.5]\n"
      ]
     }
    ],
    "source": [
     "def load_data(file_path):\n",
     "    dataframes = []\n",
+    "    x_values = []  # List to store the x values\n",
     "    with open(file_path, 'r') as file:\n",
     "        lines = file.readlines()\n",
     "        x_value = None\n",
@@ -120,6 +58,7 @@
     "                match = re.search('line-(.*)m', line)\n",
     "                if match is not None:\n",
     "                    x_value = float(match.group(1))\n",
+    "                    x_values.append(x_value)  # Append the x value to the list\n",
     "            elif line.strip() == ')':\n",
     "                df = pd.DataFrame(data, columns=['x', 'y', 'u(y)'])\n",
     "                df = df.sort_values(by='y')\n",
@@ -128,12 +67,137 @@
     "            elif '\\t' in line:\n",
     "                y, u_y = map(float, line.split('\\t'))\n",
     "                data.append([x_value, y, u_y])\n",
-    "    return dataframes\n",
+    "    # Concatenate all dataframes into one\n",
+    "    final_df = pd.concat(dataframes)\n",
+    "    return final_df, x_values  # Return the dataframe and the list of x values\n",
     "\n",
     "file_path = 'data/ProfilsTransverseVitesseAxiale'\n",
-    "dataframes = load_data(file_path)\n",
-    "print(dataframes)"
+    "data, x_values = load_data(file_path)\n",
+    "print(data)\n",
+    "print(x_values)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On cherche à calculer $\\delta(x)$ l'épaisseur de la couche de cisaillement.\n",
+    "\n",
+    "La couche de cisaillement est ici définie comme la zone où $\\overline{u}$ varie de $U_0 + 0,1 \\Delta U$ à $U_0 + 0,9 \\Delta U$ où $\\Delta U = U_1 - U_0$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "U_0 = 5\n",
+    "U_1 = 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shear layer thickness at x = 0.0: 0.0\n",
+      "Shear layer thickness at x = 0.1: 0.007730499999999998\n",
+      "Shear layer thickness at x = 0.2: 0.014853499999999999\n",
+      "Shear layer thickness at x = 0.3: 0.0223533\n",
+      "Shear layer thickness at x = 0.4: 0.02944563\n",
+      "Shear layer thickness at x = 0.5: 0.037416290000000005\n"
+     ]
+    }
+   ],
+   "source": [
+    "def shear_layer_thickness(df, x, _U_0 = U_0, _U_1 = U_1):\n",
+    "    # Filter dataframe for given x\n",
+    "    df_x = df[df['x'] == x]\n",
+    "    \n",
+    "    # Calculate delta_U\n",
+    "    #U_0 = df_x['u(y)'].min()\n",
+    "    #U_1 = df_x['u(y)'].max()\n",
+    "    delta_U = _U_1 - _U_0\n",
+    "    \n",
+    "    # Filter dataframe for u(y) values in shear layer\n",
+    "    df_shear = df_x[(df_x['u(y)'] >= _U_0 + 0.1*delta_U) & (df_x['u(y)'] <= _U_0 + 0.9*delta_U)]\n",
+    "    # Calculate and return shear layer thickness\n",
+    "    thickness = df_shear['y'].max() - df_shear['y'].min()\n",
+    "    return thickness\n",
+    "\n",
+    "# Test the function\n",
+    "for x in x_values:\n",
+    "    thickness = shear_layer_thickness(data, x)\n",
+    "    print(f\"Shear layer thickness at x = {x}: {thickness}\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De même on va calculer $y^*$, qui à un $x$ donné est l'ordonnée $y$ telle que $\\overline{u}(y^*) = \\dfrac{U_0 + U_1}{2}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y_star at x=0.0: 0.02\n",
+      "y_star at x=0.1: 0.0211001\n",
+      "y_star at x=0.2: 0.0217576\n",
+      "y_star at x=0.3: 0.0250053\n",
+      "y_star at x=0.4: 0.0220731\n",
+      "y_star at x=0.5: 0.0215589\n"
+     ]
+    }
+   ],
+   "source": [
+    "def compute_y_star(df, x, _U_0 = U_0, _U_1 = U_1):\n",
+    "    # Filter dataframe for given x\n",
+    "    df_x = df[df['x'] == x]\n",
+    "    \n",
+    "    # Calculate the midpoint of U_0 and U_1\n",
+    "    U_mid = (_U_0 + _U_1) / 2\n",
+    "    \n",
+    "    # Find the y value where U(y) is closest to U_mid\n",
+    "    y_star = df_x.iloc[(df_x['u(y)'] - U_mid).abs().idxmin()]['y']\n",
+    "    \n",
+    "    return y_star\n",
+    "\n",
+    "# Test the function\n",
+    "for x in x_values:\n",
+    "    y_star = compute_y_star(data, x)\n",
+    "    print(f\"y_star at x={x}: {y_star}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Maintenant on peut adimensionnaliser les profils, avec :\n",
+    "- l'abscisse $\\dfrac{y-y^*}{\\delta}$\n",
+    "\n",
+    "- l'ordonnée $\\dfrac{\\overline{u} - U_0}{U_1 - U_0}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
